# wig-aesthetic-mcp

./: README.md  pyproject.toml
src/wig_aesthetic_mcp/: wig_aesthetic_mcp.py
